feat: adicionando novos end-points para o fluxo completo da OS. sem os testes implementados.
